<resources>
    <string name="app_name">Spisbart?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="function_not_yet_implemented">Denne funksjonen er ikke implementert enda.</string>
    <string name="ingredient_header_text">Innhold:</string>
    <string name="allergic_result">Produktet er trygt å konsumere.</string>
    <string name="allergic_title">Allergener:</string>
    <string name="show_result">Vis sist scannede produkt</string>
    <string name="manual_search">Søk etter et produkt</string>
    <string name="scan_product">Skann produkt</string>
    <string name="settings">Instillinger</string>
    <string name="product_does_not_exist_title">Produktet finnes ikke</string>
    <string name="product_does_not_exist_msg">Dette produktet eksisterer ikke i databasen. Ønsker du å legge det til?</string>
    <string name="yes">Ja</string>
    <string name="no">Nei</string>
    <string name="my_diets">Mine dietter</string>
    <string name="product_ean">Produktets ean kode</string>
    <string name="product_name">produkt navn</string>
    <string name="add_ingredient">Legg til ingrediens</string>
    <string name="add_product_to_db">Legg til produkt i databasen</string>
    <string name="my_diets_title">Mine dietter</string>
    <string name="scan_fragment_title">Skann et produkt</string>
    <string name="search_fragment_title">Finn produkt</string>
    <string name="result_fragment_title">Ukjent produkt</string>
    <string name="diet_fragment_explenation">Her kan du legge til og fjerne dietter.</string>
    <string name="add_diet">Legg til diett</string>
    <string name="find_product">Finn produkt</string>
    <string name="search_hint">Søke hint?</string>
    <string name="add_product_fragment_title">Legg til produkt</string>
    <string name="company_name">Produsentens navn</string>
    <string name="diet_name">Diett navn</string>
    <string name="new_user_title">Velkommen til eatable!</string>
    <string name="welcome_message">For å kunne få tilbakemelding på et produkt, basert på dine diettbehov, må du legge til en eller flere dietter i mine dietter. Ønsker du å gjøre det nå?</string>
    <string name="choose_a_product_first_title">Ingen produkt er valgt</string>
    <string name="choose_a_product_first">Du må velge et produkt før du kan se det forrige valgte produktet. Vil du søke etter eller skanne et produkt?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_product_ingredient_fragment">Legg til ingrediens</string>
    <string name="conflicts_title">I konflikt med din diett</string>
    <string name="source">Kilde</string>
    <string name="sources">Kilder</string>
    <string name="allergens">Allergener</string>
    <string name="types">Typer</string>
    <string name="produced_by">Produsert av</string>
    <string name="last_updated">Sist oppdatert</string>
    <string name="custom_diet">Lag egendefinert diett</string>
    <string name="add_selected_type_to_diet">Legg til i listen</string>
    <string name="create_diet">Legg til diett</string>
    <string name="custom_diet_title">Egendefinert diett</string>
    <string name="add_allergen_to_custom_diet">Legg til allergen</string>
    <string name="add_type_to_custom_diet">Legg til type</string>
    <string name="add_source_to_custom_diet">Legg til kilde</string>

    <string-array name="custom_diet_spinner">
        <item>Allergener</item>
        <item>Kilder</item>
        <item>Typer</item>
    </string-array>
</resources>
