<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".gui.CustomDietFragment">
    <LinearLayout
        android:id="@+id/diet_name_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/custom_diet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/diet_name"/>
        <EditText
            android:id="@+id/define_diet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/custom_diet_name"/>
    </LinearLayout>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/diet_name_row"
        android:layout_toLeftOf="@+id/add_to_diet"
        android:layout_toStartOf="@+id/add_to_diet"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/create_diet_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/create_diet"/>
    <Button
        android:id="@+id/add_to_diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_selected_type_to_diet"
        android:layout_below="@id/diet_name_row"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/custom_diet_list_view"
        android:layout_below="@+id/add_to_diet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/create_diet_btn"/>
</RelativeLayout>
