<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.ResultFragment"
    android:layout_marginTop="?attr/actionBarSize">
    <!--android:background="#ffffff"-->

    <TextView
        android:id="@+id/last_updated_tag"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/producer_nametag"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/last_updated_tag"
        />
    <TextView
        android:id="@+id/allergic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/conflicts_title"
        android:layout_below="@id/producer_nametag"
        android:textSize="@dimen/abc_text_size_large_material"/>
    <ImageView
        android:id="@+id/is_eatable_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/allergic_title"
        android:src="@drawable/iseatable"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/product_acceptance"
        android:layout_below="@id/allergic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/is_eatable_icon"
        android:layout_alignParentLeft="true"
        android:maxLines="10"
        android:layout_marginLeft="10dp"
        android:text="@string/allergic_result"/>
    <TextView
        android:id="@+id/ingredient_title_textview"
        android:layout_below="@id/product_acceptance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/ingredient_header_text"
        android:textSize="@dimen/abc_text_size_large_material" />
    <TextView
        android:id="@+id/ingredient_list"
        android:layout_below="@id/ingredient_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp" />

</RelativeLayout>
